--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>tumiladnie</title>
+    <script src="https://use.fontawesome.com/01e4ae76b8.js"></script>
   </head>
   <body>
     <div id="app"></div>
